<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_nomor_urut"
        android:text="@string/_1"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#34495e"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/tv_nama_gejala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/tv_nomor_urut"
        android:text="@string/nama_gejala"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#34495e"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_toStartOf="@id/img_arrow_next"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/tv_nama_penyakit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_penyakit"
        android:textSize="20sp"
        android:textColor="#34495e"
        android:layout_below="@id/tv_nama_gejala"
        android:layout_toEndOf="@id/tv_nomor_urut"
        android:layout_toStartOf="@id/img_arrow_next"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <ImageView
        android:id="@+id/img_arrow_next"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>