<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Bantuan">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:src="@drawable/bantu" />

    <ImageView
        android:layout_width="118dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="557dp"
        android:src="@drawable/bantuan" />

    <TextView
        android:layout_width="270dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="566dp"
        android:textSize="15sp"
        android:textColor="#4d4d4d"
        android:text="@string/test" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="483dp"
        android:src="@drawable/bantu2" />

    <ImageView
        android:layout_width="118dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="371dp"
        android:src="@drawable/bantuan2" />

    <TextView
        android:layout_width="270dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="376dp"
        android:text="@string/ahli"
        android:textColor="#4d4d4d"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="295dp"
        android:src="@drawable/bantu3" />

    <ImageView
        android:layout_width="118dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="182dp"
        android:src="@drawable/bantuan3" />

    <TextView
        android:layout_width="270dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="201dp"
        android:text="@string/info"
        android:textColor="#4d4d4d"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="107dp"
        android:src="@drawable/bantu4" />

    <ImageView
        android:layout_width="118dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="287dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/bantuan4" />

    <TextView
        android:layout_width="269dp"
        android:layout_height="68dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="21dp"
        android:text="@string/bantu"
        android:textColor="#4d4d4d"
        android:textSize="15sp" />

</RelativeLayout>